2007-07-25  Jean-David Gadina  <info@macmade.net>
	* New function: be_includePrototypeJs. This function is used to include the Prototype JavaScript framework in a backend context.
	* New function: be_includeScriptaculousJs. This function is used to include the Scriptaculous JavaScript framework in a backend context.
	* Updated the API documentation (doc/manual.sxw).
	* Release of version 3.0 of the API.

2007-07-04  Jean-David Gadina  <info@macmade.net>

	* Increased API internal version number to 3.0.
	* Fixed a bug in function fe_makeStyledContent.
	* New function: fe_includePrototypeJs. This function is used to include the Prototype JavaScript framework in a frontend context.
	* New function: fe_includeScriptaculousJs. This function is used to include the Scriptaculous JavaScript framework in a frontend context.
	* Changed coding style. Class tx_apimacmade now follows the Zend FrameWork coding rules.
	* Miscellaneous enhancements.

2006-10-19  Jean-David Gadina  <info@macmade.net>

	* Increased API internal version number to 2.8.
	* Modified the fe_buildLoginBox function. Added CSS classes to input fields.
	* Updated the API documentation (doc/manual.sxw).
	* Release of version 2.8 of the API.

2006-09-19  Jean-David Gadina  <info@macmade.net>

	* Modified the fe_buildLoginBox function. Added an option for permalogin with extension 'core_permalogin'.
	* Updated the API documentation (doc/manual.sxw).
	* Release of version 2.7 of the API.

2006-09-4  Jean-David Gadina  <info@macmade.net>

	* New function: fe_buildSearchBox. This function constructs a standard Typo3 search box for use in plugins. The result is basically the same as tslib_piBase::pi_list_searchBox, but the output is valid XHTML, without tables
	* New function: fe_buildBrowseBox. This function constructs a standard Typo3 browse box for use in plugins. The result is basically the same as tslib_piBase::pi_list_browseresults, but the output is valid XHTML, without tables.
